# bandejao-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Gemfile  Procfile  README.md  bandeco.txt  bandejao.rb  bandejao_api.rb  bandejao_bot.rb  bot.rb  bot_chat.rb  bot_config.rb  bot_inline.rb  build.rs  changes.txt  console.rb  constants.rb  consume_bot.rb  db.sqlite  docker-compose.yml  fly.toml  main.rb  reader.rb  scheduler.rb  sqlx-data.json  tags  user.rb
.github/workflows/: docker-image.yml  fly.yml
.sqlx/: query-0412f28692738d559592f2ba1caba23e85c17f26efd83555b9aabbb37ad3da43.json  query-1a1a17b0b15dec3028948e831aaaa0d509c533756ca5494b3cc399d2e712565b.json  query-1fc8d6ee99b15a7874f782e68dd88860f3804edbe2ab4f6f4f16fc0503e80ab7.json  query-58af2512189e9f28456c069d12976b8d3dd67cf804c1a96c037c578dcf94fa94.json  query-8f11658b0b67b9ba49d6c12883ad5f1401416a4d83137904a0aa3b722412b4a4.json  query-99306145c9ad09f8030d58297685c9415ca6095c548c39fb725ffca61b3fe310.json  query-c0e58360037da19b6c295a0e9b3ce4230aa2ede213a9125e956e66d1ec00c3c7.json  query-de3ea23749c8d3eb7cf2e9bd74c00928d63f4a28e8c6fb7cee6180bf47d34892.json  query-f104d6c4c2cc28b645cd21713fd7e6f09fed772d9228f717f9d1a3a9238d9d27.json
bot/: bot.rb  bot_chat.rb  bot_config.rb  bot_inline.rb  bot_papoco.rb  bot_subscription.rb
db/: config.yaml  config.yml  db_handler.rb  schedule.rb  schema.rb  ticket.rb  user.rb
db conversion/: db.local.sqlite  schedules.sql  scheudles.csv  users.csv  users.sql
db/migrate/: 20170307010536_create_users.rb  20170307010644_create_schedules.rb  20170312023427_add_preferences_to_user.rb  20170313165055_create_tickets_table.rb  20180304010007_multiple_restaurants.rb
img/: Bandejao.xcf  BandejaoMaterial.xcf
migrations/: 20221016005240_enable-uuid.down.sql  20221016005240_enable-uuid.up.sql  20221016005320_add-user.down.sql  20221016005320_add-user.up.sql  20221016175604_add-configs.down.sql  20221016175604_add-configs.up.sql  20221028024534_create-schedule.down.sql  20221028024534_create-schedule.up.sql  20221112185948_add-user-timestamps.down.sql  20221112185948_add-user-timestamps.up.sql
scripts/: db-migrate.py
src/: main.rs
src/api/: mod.rs
src/bot/: callback.rs  command.rs  config.rs  help.rs  keyboard.rs  meal.rs  meal_menu.rs  mod.rs  papoco.rs  schedule.rs  subscription.rs
src/database/: config.rs  mod.rs  schedule.rs  users.rs
src/usp/: cache.rs  error.rs  mod.rs  (+1 more)
usp/: api.rb  bandejao.rb  campus.rb  http.rb  menu.rb  model.rb  restaurant.rb  usp.rb
utils/: constants.rb  hash_utils.rb  http.rb  incrementer.rb  inflections.rb  read-pdf.rb  time.rb
(+1 files in other folders)
