[package]
name = "bandejao-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cached = "0.39.0"
chrono = "0.4.22"
dotenvy = "0.15.5"
futures = "0.3.24"
inflection-rs = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1" }
serde_json = "1"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "offline",
  "postgres",
  "migrate",
] }
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
