[package]
name = "bandejao-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cached = "0.42.0"
chrono = "0.4"
chrono-tz = "0.8"
dotenvy = "0.15"
futures = "0.3"
inflection-rs = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1" }
serde_json = "1"
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "offline",
  "postgres",
  "migrate",
  "chrono",
] }
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "full"] }
rand = "0.8"
clap = { version = "4", features = ["derive", "env"] }
tokio_schedule = "0.3.0"
